--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
-    "mongoose": "^8.1.1"
+    "mongoose": "^5.13.10",
+    "mongoose-auto-increment": "^5.0.1"
   }
 }
