--- a/package.json
+++ b/package.json
@@ -1,17 +1,28 @@
 {
-  "name": "cruds_nodejs_mangodb_express",
+  "name": "social-media-backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
+  "description": "A simple social media backend API with user management and posts",
+  "main": "server.js",
   "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": [
+    "social-media",
+    "api",
+    "nodejs",
+    "express",
+    "mongodb"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "mongoose": "^8.1.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
